--- a/index.html
+++ b/index.html
@@ -3,20 +3,20 @@
 <head>
 
 <meta charset="utf-8">
-<title>ページのタイトル</title>
+<title>随時更新していきます</title>
 <link rel="stylesheet" href="style.css">
 
 </head>
 
 <body>
 
-<h1>ホームページを作ってみよう！</h1>
+<h1>tst</h1>
 
-<p>ホームページを作るには、HTMLの知識は欠かせません。<br>覚えるまでチョット大変ですが、頑張りましょう！</p>
+<p> aaaaaa <br> iiiiiii </p>
 
-<h2>HTMLは難しくありません</h2>
+<h2>HTML</h2>
 
-<p>HTMLは決して難しいものではありません。落ち着いて文書構成を見てみましょう。<br>どうですか？意外と単純な構成だと思いませんか？</p>
+<p>HTMLを見てみましょう。<br>てすとててすと</p>
 
 </body>
 
